--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+Library/CrashedAssetImports.txt
+Library/CurrentMaximizeLayout.dwlt
+*.log
