--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\ManagerBehavior.cs" />
      <Compile Include="Assets\SheepBehavior.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>K:/Tools/Unity 5/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
